# cpp-template

./: .gitignore  CMakeLists.txt  README.md  setup_project.sh
cmake/: template.cmake
examples/TEMPLATE_ex/: CMakeLists.txt  main.cpp
examples/template_ex/: CMakeLists.txt
include/: template
include/internal/: template.h
src/: dummy.cpp
tests/: CMakeLists.txt  main.cpp
tests/cases/: template_tests.cpp
